[project]
name = "vuln-bot"
version = "0.1.0"
description = "Vulnerability Intelligence CLI Chatbot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "diskcache>=5.6.0",
    "mitreattack-python>=2.0.0",
    "python-dotenv>=1.0.0"
]

[tool.setuptools]
packages = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
